# python-dev-test

./: adult.db  pyproject.toml
config/: base_etl.py  config.py  source.py  target.py  utils.py
cron/: scheduler.sh
data/: Description
etls/: README.md  __main__.py  adult.py
tests/: conftest.py  test_adult.py
tests/etls/: test_active_coupons.py  test_adult.py
tests/fixtures/: active-coupons.json  adult.json
