[tool.poetry]
name = "running-etl-project"
version = "0.0.1"
description = ""
authors = ["vinicius-gasparini <vngasp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pandas = "^1.4.3"
certifi = "^2022.6.15"
pyminizip = "^0.2.6"
great-expectations = "^0.15.13"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"